--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
     "exclude_documentation_wrapper": true,
     "exclude_agent_icons": false,
     "remote_images": {
-      "thanatos": "docker.io/library/nginx"
+      "agent_name": "docker.io/library/nginx"
     }
   }
